[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Battle.gd" type="Script" id=1]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=2]
[ext_resource path="res://images/backgrounds/Sans titre.png" type="Texture" id=3]
[ext_resource path="res://images/Menu_interface/credits.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.880249
margin_top = -0.440125
margin_right = 0.880249
margin_bottom = -0.440125
script = ExtResource( 1 )

[node name="BackButton" type="Button" parent="."]
margin_left = 50.2022
margin_top = 33.2582
margin_right = 130.202
margin_bottom = 73.2582
rect_scale = Vector2( 0.768878, 0.768878 )
theme = ExtResource( 2 )
text = "BACK"

[node name="CodeLabel" type="Label" parent="."]
margin_left = 42.3082
margin_top = 305.946
margin_right = 188.308
margin_bottom = 339.946
rect_scale = Vector2( 0.632878, 0.632878 )
theme = ExtResource( 2 )
text = "Room Code : "

[node name="CodeVar" type="Label" parent="CodeLabel"]
margin_left = 144.546
margin_right = 184.546
margin_bottom = 34.0
text = "NA"

[node name="JoinButton" type="Button" parent="."]
margin_left = 285.916
margin_top = 148.644
margin_right = 365.916
margin_bottom = 188.644
rect_scale = Vector2( 0.703942, 0.703942 )
theme = ExtResource( 2 )
text = "JOIN"

[node name="CreateRoomNode" type="Control" parent="."]
margin_left = 0.386658
margin_top = 141.728
margin_right = 300.387
margin_bottom = 441.728
rect_scale = Vector2( 0.75, 0.75 )

[node name="TextureRect" type="TextureRect" parent="CreateRoomNode"]
visible = false
margin_right = 300.0
margin_bottom = 300.0
texture = ExtResource( 3 )

[node name="TitleLabel" type="Label" parent="CreateRoomNode"]
margin_left = 36.9433
margin_right = 215.943
margin_bottom = 34.0
rect_scale = Vector2( 1.25, 1.25 )
theme = ExtResource( 2 )
text = "Create a room :"

[node name="NumberOfCardLabel" type="Label" parent="CreateRoomNode"]
margin_top = 50.0
margin_right = 166.0
margin_bottom = 82.0
theme = ExtResource( 2 )
text = "Number of cards :"

[node name="SpinBox" type="SpinBox" parent="CreateRoomNode/NumberOfCardLabel"]
margin_left = 217.078
margin_top = -1.16182
margin_right = 291.078
margin_bottom = 48.8382
max_value = 10.0
align = 1

[node name="PriceLabel" type="Label" parent="CreateRoomNode"]
margin_left = 60.0
margin_top = 90.0
margin_right = 112.0
margin_bottom = 122.0
theme = ExtResource( 2 )
text = "Price:"

[node name="PriceVarLabel" type="Label" parent="CreateRoomNode/PriceLabel"]
margin_left = 67.1618
margin_right = 107.162
margin_bottom = 34.0
text = "0"

[node name="CreditImage" type="TextureRect" parent="CreateRoomNode/PriceLabel"]
margin_left = 94.3236
margin_top = 6.04626
margin_right = 194.324
margin_bottom = 106.046
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="CreateButton" type="Button" parent="CreateRoomNode"]
margin_left = 94.392
margin_top = 178.926
margin_right = 194.392
margin_bottom = 228.926
rect_scale = Vector2( 0.75, 0.75 )
theme = ExtResource( 2 )
text = "CREATE"

[node name="PrivacyLabel" type="Label" parent="CreateRoomNode"]
margin_left = 2.83819
margin_top = 131.023
margin_right = 151.838
margin_bottom = 165.023
theme = ExtResource( 2 )
text = "Public Room:"

[node name="PrivacyButton" type="CheckButton" parent="CreateRoomNode"]
margin_left = 155.347
margin_top = 136.254
margin_right = 467.347
margin_bottom = 294.254
rect_scale = Vector2( 0.2, 0.2 )
theme = ExtResource( 2 )
pressed = true

[node name="CancelButton" type="Button" parent="CreateRoomNode"]
visible = false
margin_left = 95.3843
margin_top = 247.231
margin_right = 208.384
margin_bottom = 286.231
theme = ExtResource( 2 )
text = "CANCEL"

[node name="ResultsImage" type="TextureRect" parent="."]
margin_left = 592.906
margin_top = 397.345
margin_right = 632.906
margin_bottom = 437.345

[connection signal="join" from="." to="." method="_on_Control_join"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="changed" from="CreateRoomNode/NumberOfCardLabel/SpinBox" to="." method="_on_SpinBox_changed"]
[connection signal="value_changed" from="CreateRoomNode/NumberOfCardLabel/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="CreateRoomNode/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="CreateRoomNode/CancelButton" to="." method="_on_CancelButton_pressed"]
